; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_mock.c_InitSubTracks.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_mock.c_InitSubTracks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.demux_sys* }
%struct.demux_sys = type { i32 }

@VLC_SUCCESS = common dso_local global i32 0, align 4
@SPU_ES = common dso_local global i32 0, align 4
@VLC_CODEC_SUBT = common dso_local global i32 0, align 4
@VLC_ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i64)* @InitSubTracks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InitSubTracks(%struct.TYPE_4__* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.demux_sys*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.demux_sys*, %struct.demux_sys** %12, align 8
  store %struct.demux_sys* %13, %struct.demux_sys** %8, align 8
  %14 = load i64, i64* %7, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %17, i32* %4, align 4
  br label %42

18:                                               ; preds = %3
  store i64 0, i64* %9, align 8
  br label %19

19:                                               ; preds = %37, %18
  %20 = load i64, i64* %9, align 8
  %21 = load i64, i64* %7, align 8
  %22 = icmp ult i64 %20, %21
  br i1 %22, label %23, label %40

23:                                               ; preds = %19
  %24 = load i32, i32* @SPU_ES, align 4
  %25 = load i32, i32* @VLC_CODEC_SUBT, align 4
  %26 = call i32 @es_format_Init(i32* %10, i32 %24, i32 %25)
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.demux_sys*, %struct.demux_sys** %8, align 8
  %30 = getelementptr inbounds %struct.demux_sys, %struct.demux_sys* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @AppendMockTrack(%struct.TYPE_4__* %27, i32* %10, i32 %28, i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %23
  %35 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %35, i32* %4, align 4
  br label %42

36:                                               ; preds = %23
  br label %37

37:                                               ; preds = %36
  %38 = load i64, i64* %9, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %9, align 8
  br label %19

40:                                               ; preds = %19
  %41 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %40, %34, %16
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @es_format_Init(i32*, i32, i32) #1

declare dso_local i64 @AppendMockTrack(%struct.TYPE_4__*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
